operator/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "{name}-web-deployment"
spec:
  replicas: 3
  selector:
    matchLabels:
      component: "{name}-app"
  template:
    metadata:
      labels:
        component: "{name}-app"
    spec:
      containers:
        - name: "{name}-app-container"
          image: anirudhg47/users-app:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            exec:
              command:
                - telnet "{name}-db-service" POSTGRES_PORT
            initialDelaySeconds: 30
            periodSeconds: 10
