operator/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{name}-db-service"
spec:
  selector:
    component: "{name}-db"
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
