operator/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{name}-web-service"
spec:
  selector:
    component: users-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
